--- a/api/.env
+++ b/api/.env
@@ -24,7 +24,7 @@ CONDUCTION_COMMONGROUND_BAG_APIKEY=!ChangeMe!
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_VERSION=0.0.1
-APP_TITLE='Tabellen Component'
+APP_TITLE='TabellenCatalogus (TC)'
 APP_DESCRIPTION='Dit is een commonground voorbeeld applicatie'
 APP_SECRET=!ChangeMe!
 TRUSTED_PROXIES=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
